[bug]#4823 align dyslexic text in rbs select

--- a/assets/themes/leo/dyslexic/theme.less
+++ b/assets/themes/leo/dyslexic/theme.less
@@ -99,3 +99,7 @@ i side-panel{
 .vertical-spacing-twice label span {
   line-height: 18px;
 }
+.form-section select{
+  padding: 0;
+  height: 30px;
+}
